# wsjcpp-sql-builder

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build_simple.sh  run_clang_format.sh  wsjcpp.yml
src/: main.cpp  wsjcpp_sql_builder.cpp  wsjcpp_sql_builder.h
src.wsjcpp/: CMakeLists.txt
src/tests/: CMakeLists.txt  test_delete.cpp  test_insert.cpp  test_select.cpp  test_update.cpp
